--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,18 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.9"
 dependencies = [
-    "pandas>=2.3.2",
-    "pypdf>=6.0.0",
-    "qdrant-client>=1.15.1",
     "torch>=2.8.0",
+    "torchaudio",
+    "torchvision",
     "transformers>=4.55.4",
 ]
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu129" }
+torchvision = { index = "pytorch-cu129" }
+torchaudio = { index = "pytorch-cu129" }
+
+[[tool.uv.index]]
+name = "pytorch-cu129"
+url = "https://download.pytorch.org/whl/cu129"
+explicit = true
