--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.9"
 dependencies = [
+    "numpy>=2.0.2",
+    "opensearch-py>=3.0.0",
+    "pypdf>=6.0.0",
+    "python-dotenv>=1.1.1",
     "torch>=2.8.0",
     "torchaudio",
     "torchvision",
